# binsmith

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
binsmith/: cli.py  plugin.py
binsmith/runtime/: agent_factory.py
frontend/: package-lock.json  vite.config.ts
